feat: add favicons

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
+    <!-- Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -173,7 +179,7 @@
     ></script>
 
     <!-- Syntax Highlighting -->
-    <link rel="stylesheet" href="/static/vendor/dracula.css" />
+    <link rel="stylesheet" href="/vendor/dracula.css" />
     <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.1.2/build/highlight.min.js"></script>
     <script>
       hljs.initHighlightingOnLoad();
