--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,37 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
+    <title>Ocurl - URL Shortener REST API and Extension</title>
+    <meta name="title" content="Ocurl - URL Shortener REST API and Extension" />
+    <meta
+      name="description"
+      content="Ocurl is a free web REST API that you can use to shorten your URLs to however long you want. Stop typing long links. This is a great tool for developers. Ocurl also provides a Chrome extension and Discord Bot."
+    />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ocurl.io/" />
+    <meta
+      property="og:title"
+      content="Ocurl - URL Shortener REST API and Extension"
+    />
+    <meta
+      property="og:description"
+      content="Ocurl is a free web REST API that you can use to shorten your URLs to however long you want. Stop typing long links. This is a great tool for developers. Ocurl also provides a Chrome extension and Discord Bot."
+    />
+    <meta property="og:image" content="" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://ocurl.io/" />
+    <meta
+      property="twitter:title"
+      content="Ocurl - URL Shortener REST API and Extension"
+    />
+    <meta
+      property="twitter:description"
+      content="Ocurl is a free web REST API that you can use to shorten your URLs to however long you want. Stop typing long links. This is a great tool for developers. Ocurl also provides a Chrome extension and Discord Bot."
+    />
+    <meta property="twitter:image" content="" />
+
     <!-- Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -183,6 +214,21 @@
     <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.1.2/build/highlight.min.js"></script>
     <script>
       hljs.initHighlightingOnLoad();
+    </script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="//www.googletagmanager.com/gtag/js?id=UA-148475828-3"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-148475828-3');
     </script>
   </body>
 </html>
