--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" type="text/css" href="/css/index.css" />
 
     <title>One Click URL</title>
   </head>
