--- a/public/index.html
+++ b/public/index.html
@@ -48,12 +48,16 @@
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
-      href="//stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" type="text/css" href="/css/index.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://ocurl.io/css/index.css"
+    />
 
     <title>One Click URL</title>
   </head>
@@ -158,30 +162,30 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
-      src="//code.jquery.com/jquery-3.5.1.slim.min.js"
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
     ></script>
     <script
-      src="//cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
       integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
       crossorigin="anonymous"
     ></script>
     <script
-      src="//stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
 
     <!-- Syntax Highlighting -->
-    <link rel="stylesheet" href="/vendor/dracula.css" />
-    <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.1.2/build/highlight.min.js"></script>
+    <link rel="stylesheet" href="https://ocurl.io/vendor/dracula.css" />
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.1.2/build/highlight.min.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="//www.googletagmanager.com/gtag/js?id=UA-148475828-3"
+      src="https://www.googletagmanager.com/gtag/js?id=UA-148475828-3"
     ></script>
-    <script src="/script/index.js"></script>
+    <script src="https://ocurl.io/script/index.js"></script>
   </body>
 </html>
