chore: link to the extensions

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,20 @@
             Ocurl (prononced <i>oh-curl</i>), the URL shortener REST API
           </p>
           <p class="text-center">
-            Now available as a Chrome Extension and Discord Bot
+            Now available as a
+            <a
+              href="https://chrome.google.com/webstore/detail/1-click-url/obmdcjlmgabdmcoiconimmddlfldpjni?hl=en-GB&authuser=0"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Chrome Extension</a
+            >
+            and
+            <a
+              href="https://github.com/nigel5/ocurl-discord"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Discord Bot</a
+            >
           </p>
         </div>
       </div>
