feat: link to website

--- a/public/index.html
+++ b/public/index.html
@@ -189,7 +189,13 @@
       </div>
       <br />
       <div class="row justify-content-center">
-        <div class="col-4 text-center">&copy; Nigel Huang 2020</div>
+        <div class="col-4 text-center">
+          &copy;
+          <a href="https://nigel5.com" target="_blank" rel="noopener noreferrer"
+            >Nigel Huang</a
+          >
+          2020
+        </div>
       </div>
     </footer>
 
