chore: update bot link

--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
             >
             and
             <a
-              href="https://github.com/nigel5/ocurl-discord"
+              href="https://top.gg/bot/749101362171740201"
               target="_blank"
               rel="noopener noreferrer"
               >Discord Bot</a
